# ezlife

./: .gitignore  README.md  clone_private_git_repo.sh  pyproject.toml  requirements.txt  sample.ipynb  setup_env.sh  update_path.sh  working_nb exllama loader.ipynb
ezlife/ml/benchmarker/: __init__.py  benchmarker.py
ezlife/ml/benchmarker/loaders/: autoawq_loader.py  exllamav2_loader.py  huggingface_loader.py  loader.py
ezlife/ml/benchmarker/utils/: gpu_utils.py  misc.py  model_utils.py
ml/benchmarker/: __init__.py  benchmarker.py
ml/benchmarker/loaders/: huggingface_loader.py  loader.py
ml/utils/: mem_utils.py  model_downloader.py
