[tool.poetry]
name = "ezlife"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.4"
ipykernel = "^6.29.5"
transformers = "^4.42.3"
accelerate = "^0.32.1"
torch = { version = "^2.2.1", optional = true }
nvidia-ml-py3 = "^7.352.0"

pandas = "^2.2.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
torch = { version = "^2.2.1", source = "torch_cuda", markers = "extra=='gpu' and extra!='cpu'" }


[tool.poetry.extras]
gpu = ["torch"]

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"