[tool.poetry]
name = "ezlife"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.4"
ipykernel = "^6.29.5"
transformers = "^4.42.3"
accelerate = "^0.32.1"
nvidia-ml-py3 = "^7.352.0"
pandas = "^2.2.2"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
exllamav2 = {url = "https://github.com/turboderp/exllamav2/releases/download/v0.1.6/exllamav2-0.1.6+cu121.torch2.3.1-cp310-cp310-linux_x86_64.whl"}
auto-gptq = "^0.7.1"
setuptools = "^70.2.0"
packaging = "^24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"